--- a/Indexers/Indexers.csproj
+++ b/Indexers/Indexers.csproj
@@ -41,6 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LocalIndexer.cs" />
+    <Compile Include="Model\Album.cs" />
+    <Compile Include="Model\Music.cs" />
+    <Compile Include="Model\MusicDatabase.cs" />
+    <Compile Include="Model\XmlUtils.cs" />
     <Compile Include="Peer.cs" />
     <Compile Include="PeerContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
