--- a/App/app.config
+++ b/App/app.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="port" value="8081"/>
+  </appSettings>
   <system.runtime.remoting>
     <application>
       <channels>
-        <channel ref="http" port="8080"/>
+        <channel ref="http" port="8081"/>
       </channels>
 
       <service>
