--- a/App/app.config
+++ b/App/app.config
@@ -12,9 +12,9 @@
 
       <service>
         <!-- Namespace.Type, Assembly  -->
-        <wellknown type="Indexers.LocalIndexer, Indexers"
+        <wellknown type="Logic.SearchEngine, Logic"
                    mode="Singleton"
-                   objectUri="Indexer"/>
+                   objectUri="SearchEngine"/>
       </service>
     </application>
   </system.runtime.remoting>
