--- a/Indexers/Logic.csproj
+++ b/Indexers/Logic.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CFE72992-F704-4436-8B1F-A3DF839CDA17}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Indexers</RootNamespace>
-    <AssemblyName>Indexers</AssemblyName>
+    <RootNamespace>Logic</RootNamespace>
+    <AssemblyName>Logic</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,6 +49,7 @@
     <Compile Include="PeerContainer.cs" />
     <Compile Include="PeerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchEngine.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
