Criado Request Terminadas pesquisas

--- a/App/app.config
+++ b/App/app.config
@@ -15,6 +15,10 @@
         <wellknown type="Logic.SearchEngine, Logic"
                    mode="Singleton"
                    objectUri="SearchEngine"/>
+
+        <wellknown type="Logic.Peer, Logic"
+                   mode="Singleton"
+                   objectUri="ResponseAgent"/>
       </service>
     </application>
   </system.runtime.remoting>
