Criados Forms de Visualização e Edição da Base de Dados

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@
 /Interfaces/obj/Debug/Interfaces.csproj.FileListAbsolute.txt
 /Interfaces/obj/Debug/Interfaces.dll
 /Interfaces/obj/Debug/Interfaces.pdb
+/App/bin/Debug/App.vshost.exe.manifest
+/App/bin/Debug/Logic.dll
+/App/bin/Debug/Logic.pdb
+/Indexers/bin/Debug/Logic.dll
+/Indexers/bin/Debug/Logic.pdb
+/Indexers/obj/Debug/Logic.csproj.FileListAbsolute.txt
+/Indexers/obj/Debug/Logic.dll
+/Indexers/obj/Debug/Logic.pdb
