--- a/App/app.config
+++ b/App/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="port" value="8081"/>
-    <add key="DATABASE_FILE" value="MusicDatabase.msdb"/>
+    <add key="DATABASE_FILE" value="Content/MusicDatabaseViewer.msdb"/>
   </appSettings>
   <system.runtime.remoting>
     <application>
