--- a/App/app.config
+++ b/App/app.config
@@ -1,13 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="port" value="8080"/>
+    <add key="port" value="8081"/>
     <add key="DATABASE_FILE" value="Content/MusicDatabaseViewer.msdb"/>
   </appSettings>
   <system.runtime.remoting>
     <application>
       <channels>
-        <channel ref="http" port="8080"/>
+        <channel ref="http" port="8081">
+          <serverProviders>
+            <formatter ref="soap" typeFilterLevel="Full"/>
+          </serverProviders>
+        </channel>
       </channels>
 
       <service>
@@ -15,10 +19,6 @@
         <wellknown type="Logic.SearchEngine, Logic"
                    mode="Singleton"
                    objectUri="SearchEngine"/>
-
-        <wellknown type="Logic.Peer, Logic"
-                   mode="Singleton"
-                   objectUri="ResponseAgent"/>
       </service>
     </application>
   </system.runtime.remoting>
