--- a/App/app.config
+++ b/App/app.config
@@ -17,7 +17,7 @@
       <service>
         <!-- Namespace.Type, Assembly  -->
         <wellknown type="Logic.SearchEngine, Logic"
-                   mode="Singleton"
+                   mode="SingleCall"
                    objectUri="SearchEngine"/>
       </service>
     </application>
